feature: add main page

--- a/ford-v-ferrari.html
+++ b/ford-v-ferrari.html
@@ -6,7 +6,7 @@
 
     <title>Ford v Ferrari</title>
 
-    <link rel="stylesheet" href="./movies.css" />
+    <link rel="stylesheet" href="./pages/movies.css" />
   </head>
 </html>
 <body class="movies">
@@ -31,7 +31,7 @@
       </div>
     </section>
     <section class="movie">
-      <h1 class="movie__title">Ford&nbsp;v&nbsp; Ferrari</h1>
+      <h1 class="movie__title">Ford&nbsp;v&nbsp;Ferrari</h1>
       <button class="movie__button">+</button>
       <ul class="movie__details">
         <li class="movie__year">2019</li>
