feat: plot and people section added

--- a/ford-v-ferrari.html
+++ b/ford-v-ferrari.html
@@ -10,8 +10,8 @@
   </head>
 </html>
 <body class="movies">
-  <header class="header">
-    <button class="header__button"></button>
+  <header class="header header_ford-v-ferrari">
+    <a href="index.html" class="header__button"></a>
   </header>
   <main>
     <section class="rating">
@@ -43,7 +43,37 @@
           <li class="movie__genre">Biography</li>
           <li class="movie__genre">Drama</li>
       </ul>
-      
+    </section>
+    <section class="plot">
+        <h2 class="plot__title">Plot Summary</h2>
+        <p class="plot__detail">American car designer Carroll Shelby and driver Ken Miles battle corporate interference and the laws of physics to build a revolutionary race car for Ford in order. </p>
+    </section>
+    <section class="people">
+        <h2 class="people__title">Cast & Crew</h2>
+        <ul class="people__list scroll scroll_no-scrollbar">
+            <li class="people__card">
+                <img src="images/JamesMangold.jpg" class="people__photo" alt="James Mangold">
+                <p class="people__name">James Mangold</p>
+                <p class="people__occupation">Director</p>
+            </li>
+            <li class="people__card">
+                <img src="images/Matt Damon.jpg" class="people__photo" alt="Matt Damon">
+                <p class="people__name">Matt Damon</p>
+                <p class="people__occupation">Carroll</p>
+            </li>
+            <li class="people__card">
+                <img src="images/ChristianBale.jpg" class="people__photo" alt="Christian Bale">
+                <p class="people__name">Christian Bale</p>
+                <p class="people__occupation">Ken Miles</p>
+            </li>
+            <li class="people__card">
+                <img src="images/CaitrionaBalfe.jpg" class="people__photo" alt="Caitriona Balfe">
+                <p class="people__name">Caitriona Balfe</p>
+                <p class="people__occupation">Mollie</p>
+            </li>
+            
+        </ul>
     </section>
   </main>
 </body>
+</html>
