feature: optimize css

--- a/the-departed.html
+++ b/the-departed.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./pages/movies.css" />
   </head>
 </html>
-<body class="movies">
+<body class="movies page">
   <header class="header header_the-departed">
     <a href="index.html" class="header__button"></a>
   </header>
