feature: fix back button

--- a/ford-v-ferrari.html
+++ b/ford-v-ferrari.html
@@ -11,7 +11,7 @@
 </html>
 <body class="movies page">
   <header class="header header_ford-v-ferrari">
-    <a href="index.html" class="header__button"></a>
+    <a href="./index.html"><button class="button button_back"></button></a>
   </header>
   <main>
     <section class="rating">
