feature: optimize list elements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <!-- Statuses -->
       <section class="statuses">
-        <ul class="statuses__list scroll">
+        <ul class="list list_with-scrollbar scroll">
           <li class="statuses__item statuses__item_active content-title">
             In Theater
           </li>
@@ -28,7 +28,7 @@
 
       <!-- Categories -->
       <section class="categories">
-        <ul class="categories__list scroll scroll_no-scrollbar">
+        <ul class="list scroll scroll_no-scrollbar">
           <li class="categories__item">Action</li>
           <li class="categories__item">Crime</li>
           <li class="categories__item">Comedy</li>
@@ -38,7 +38,7 @@
 
       <!-- Movies -->
       <section class="cards">
-        <ul class="cards__list scroll scroll_no-scrollbar">
+        <ul class="list scroll scroll_no-scrollbar">
           <li class="cards__item">
             <a href="./ford-v-ferrari.html" class="cards__link">
               <img
