feature: optimize categories

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <!-- Categories -->
       <section class="categories">
         <ul class="list scroll scroll_no-scrollbar">
-          <li class="categories__item">Action</li>
-          <li class="categories__item">Crime</li>
-          <li class="categories__item">Comedy</li>
-          <li class="categories__item">Drama</li>
+          <li class="categories__item category category_large">Action</li>
+          <li class="categories__item category category_large">Crime</li>
+          <li class="categories__item category category_large">Comedy</li>
+          <li class="categories__item category category_large">Drama</li>
         </ul>
       </section>
 
