feature: optimize css

--- a/ford-v-ferrari.html
+++ b/ford-v-ferrari.html
@@ -39,9 +39,9 @@
         <li class="movie__runtime">2h 32min</p>
       </ul>
       <ul class="movie__genres">
-          <li class="movie__genre">Action</li>
-          <li class="movie__genre">Biography</li>
-          <li class="movie__genre">Drama</li>
+          <li class="category category_small movie__genre">Action</li>
+          <li class="category category_small movie__genre">Biography</li>
+          <li class="category category_small movie__genre">Drama</li>
       </ul>
     </section>
     <section class="plot">
