feature: optimize cards elements

--- a/index.html
+++ b/index.html
@@ -39,55 +39,55 @@
       <!-- Movies -->
       <section class="cards">
         <ul class="list scroll scroll_no-scrollbar">
-          <li class="cards__item">
-            <a href="./ford-v-ferrari.html" class="cards__link">
+          <li class="cards__item card">
+            <a href="./ford-v-ferrari.html" class="content-link">
               <img
                 src="./images/ford-v-ferrari.jpg"
                 alt="Ford v Ferrari"
-                class="cards__image"
+                class="card__image"
               />
-              <p class="content-title cards__title">Ford v Ferrari</p>
-              <p class="cards__text">
+              <p class="content-title card__title">Ford v Ferrari</p>
+              <p class="card__text">
                 <img
                   src="./images/goldstar.svg"
                   alt="Icon: Gold Star"
-                  class="cards__icon"
+                  class="card__icon"
                 />
                 8.2
               </p>
             </a>
           </li>
-          <li class="cards__item">
-            <a href="./the-departed.html" class="cards__link">
+          <li class="cards__item card">
+            <a href="./the-departed.html" class="content-link">
               <img
                 src="./images/the-departed.jpg"
                 alt="The Departed"
-                class="cards__image"
+                class="card__image"
               />
-              <p class="content-title cards__title">The Departed</p>
-              <p class="cards__text">
+              <p class="content-title card__title">The Departed</p>
+              <p class="card__text">
                 <img
                   src="./images/goldstar.svg"
                   alt="Icon: Gold Star"
-                  class="cards__icon"
+                  class="card__icon"
                 />
                 9.0
               </p>
             </a>
           </li>
-          <li class="cards__item">
-            <a href="./relatos-salvajes.html" class="cards__link">
+          <li class="cards__item card">
+            <a href="./relatos-salvajes.html" class="content-link">
               <img
                 src="./images/relatos-salvajes.jpg"
                 alt="Relatos Salvajes"
-                class="cards__image"
+                class="card__image"
               />
-              <p class="content-title cards__title">Relatos Salvajes</p>
-              <p class="cards__text">
+              <p class="content-title card__title">Relatos Salvajes</p>
+              <p class="card__text">
                 <img
                   src="./images/goldstar.svg"
                   alt="Icon: Gold Star"
-                  class="cards__icon"
+                  class="card__icon"
                 />
                 9.3
               </p>
