--- a/the-departed.html
+++ b/the-departed.html
@@ -11,7 +11,7 @@
 </html>
 <body class="movies page">
   <header class="header header_the-departed">
-    <a href="index.html" class="header__button"></a>
+    <a href="./index.html"><button class="button button_back"></button></a>
   </header>
   <main>
     <section class="rating">
@@ -39,9 +39,9 @@
         <li class="movie__runtime">2h 31min</p>
       </ul>
       <ul class="movie__genres">
-          <li class="movie__genre">Crime</li>
-          <li class="movie__genre">Drama</li>
-          <li class="movie__genre">Thriller</li>
+          <li class="category category_small movie__genre">Crime</li>
+          <li class="category category_small movie__genre">Drama</li>
+          <li class="category category_small movie__genre">Thriller</li>
       </ul>
     </section>
     <section class="plot">
