feature: optimize css

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       </section>
 
       <!-- Movies -->
-      <section class="cards">
+      <section class="movie-cards">
         <ul class="list scroll scroll_no-scrollbar">
-          <li class="cards__item movie-card">
+          <li class="movie-cards__item movie-card">
             <a href="./ford-v-ferrari.html" class="content-link">
               <img
                 src="./images/ford-v-ferrari.jpg"
@@ -57,7 +57,7 @@
               </p>
             </a>
           </li>
-          <li class="cards__item movie-card">
+          <li class="movie-cards__item movie-card">
             <a href="./the-departed.html" class="content-link">
               <img
                 src="./images/the-departed.jpg"
@@ -75,7 +75,7 @@
               </p>
             </a>
           </li>
-          <li class="cards__item movie-card">
+          <li class="movie-cards__item movie-card">
             <a href="./relatos-salvajes.html" class="content-link">
               <img
                 src="./images/relatos-salvajes.jpg"
