feature: fix header background

--- a/ford-v-ferrari.html
+++ b/ford-v-ferrari.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Ford v Ferrari</title>
-
-    <link rel="stylesheet" href="./pages/movies.css" />
+    <link rel="stylesheet" href="./pages/movies.css"/>
   </head>
 </html>
-<body class="movies page">
-  <header class="header header_ford-v-ferrari">
+<body class="page">
+
+  <header class="header header__back header__back_ford-v-ferrari">
     <a href="./index.html"><button class="button button_back"></button></a>
   </header>
+
   <main>
-    <section class="rating">
+    <!-- <section class="rating">
       <div class="score">
         <img src="images/goldstar.svg" class="score__image" alt="gold star" />
         <h2 class="score__title">8.2/10</h2>
@@ -29,8 +29,8 @@
         <h2 class="metacritic__title">Metacritic</h2>
         <p class="metacritic__reviews">62 critic reviews</p>
       </div>
-    </section>
-    <section class="movie">
+    </section> -->
+    <!-- <section class="movie">
       <h1 class="movie__title">Ford&nbsp;v&nbsp;Ferrari</h1>
       <button class="movie__button">+</button>
       <ul class="movie__details">
@@ -43,12 +43,12 @@
           <li class="category category_small movie__genre">Biography</li>
           <li class="category category_small movie__genre">Drama</li>
       </ul>
-    </section>
-    <section class="plot">
+    </section> -->
+    <!-- <section class="plot">
         <h2 class="plot__title">Plot Summary</h2>
         <p class="plot__detail">American car designer Carroll Shelby and driver Ken Miles battle corporate interference and the laws of physics to build a revolutionary race car for Ford in order. </p>
-    </section>
-    <section class="people">
+    </section> -->
+    <!-- <section class="people">
         <h2 class="people__title">Cast & Crew</h2>
         <ul class="people__list scroll scroll_no-scrollbar">
             <li class="people__card">
@@ -73,7 +73,7 @@
             </li>
             
         </ul>
-    </section>
+    </section> -->
   </main>
 </body>
 </html>
