--- a/the-departed.html
+++ b/the-departed.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./pages/movies.css" />
   </head>
 </html>
-<body class="movies page">
-  <header class="header header_the-departed">
+<body class="page">
+  <header class="header header__back header__back_the-departed">
     <a href="./index.html"><button class="button button_back"></button></a>
   </header>
   <main>
