feature: fix add button

--- a/relatos-salvajes.html
+++ b/relatos-salvajes.html
@@ -36,7 +36,7 @@
 
     <!-- Movie Info -->
     <section class="movie">
-      <h1 class="content-title">Relatos Salvajes</h1>
+      <h1 class="movie__title content-title">Relatos Salvajes</h1>
       <button class="button icon icon_add"></button>
       <ul class="movie-details list">
         <li class="movie-details__item content-text">2014</li>
