--- a/ford-v-ferrari.html
+++ b/ford-v-ferrari.html
@@ -36,7 +36,7 @@
 
     <!-- Movie Info -->
     <section class="movie">
-      <h1 class="content-title">Ford v Ferrari</h1>
+      <h1 class="movie__title content-title">Ford v Ferrari</h1>
       <button class="button icon icon_add"></button>
       <ul class="movie-details list">
         <li class="movie-details__item content-text">2019</li>
