--- a/the-departed.html
+++ b/the-departed.html
@@ -36,7 +36,7 @@
 
     <!-- Movie Info -->
     <section class="movie">
-      <h1 class="content-title">The Departed</h1>
+      <h1 class="movie__title content-title">The Departed</h1>
       <button class="button icon icon_add"></button>
       <ul class="movie-details list">
         <li class="movie-details__item content-text">2006</li>
